# pythonCRUD

./: .env  .env.example  .pre-commit-config.yaml  main.py  manage.py  mydatabase.dump  mydatabse.dump  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  run-servers.sh
CRUD/: __init__.py  admin.py  apps.py  db_signals.py  settings.py  test.py  urls.py  wsgi.py
CRUD/CRUD/: settings.py  urls.py
CRUD/CRUDapp/: admin.py  models.py  urls.py  views.py
CRUD/CRUDapp/migrations/: 0001_initial.py
CRUD/CRUDapp/templates/: index.html
CRUD/data/model/: models.py
CRUD/data/models/: auth_model.py  course_model.py  student_model.py  teacher_model.py
CRUD/data/repositories/: auth_repository.py  course_repository.py  repositories.py  student_repositorie.py  student_repository.py  teacher_repository.py
CRUD/domain/: entity.py
CRUD/migrations/: 0001_initial.py  0002_rename_student_student_model.py  0003_course_model.py  0004_student_model_course.py  0005_auth_model_alter_student_model_id.py  0006_auth_model_username.py  0007_alter_auth_model_username.py  0008_student_model_created_by.py  0009_alter_student_model_email_teacher_model.py  0010_alter_auth_model_email_alter_teacher_model_email.py  0011_delete_teacher_model.py  0012_teacher_model.py
CRUD/presentation/: views.py
CRUD/templates/: base.html  course.html  index.html  login.html  react_app_index.html  register.html  teacher.html
CRUD/tests/: test_auth_views.py  test_courses_views.py  test_student_views.py  test_teachers_views.py
(+67 files in other folders)
