[project]
name = "pythoncrud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.7",
    "django-browser-reload>=1.18.0",
    "django-cors-headers>=4.7.0",
    "psycopg>=3.2.6",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
